# faerry

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  index.html  package-lock.json  package.json
.agents/: MEMORY.md  README.md
.github/workflows/: release.yml
apps/agents-manager/: README.md  index.html  node_modules  package-lock.json  package.json
apps/agents-manager/scripts/: package-portable.mjs
apps/agents-manager/src/: main.tsx  styles.css
apps/agents-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/agents-manager/src-tauri/capabilities/: default.json
apps/agents-manager/src-tauri/src/: auth.rs  bundled.rs  lib.rs  logs.rs  main.rs  mcp_editor.rs  models.rs  preview.rs  profiles.rs  repo.rs  script_versions.rs  scripts.rs  status.rs  validation.rs
assets/logo/: README.md
examples/minimal-agents/: AGENTS.md
examples/minimal-agents/mcp/: servers.json
examples/minimal-agents/skills/example/: SKILL.md
mcp/: servers.schema.json
scripts/: create-updater-manifest.mjs  link-agents.ps1  link-agents.sh  package-claude-skills.ps1  package-claude-skills.sh  package-portable.mjs  release.mjs  sync-all-agents.ps1  sync-all-agents.sh  sync-claude-cowork-skills.mjs  sync-mcps.mjs  sync-source-skills.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bundled.rs  lib.rs  logs.rs  main.rs  mcp_editor.rs  models.rs  repo.rs  script_versions.rs  scripts.rs  source_editor.rs  status.rs  validation.rs
