[package]
name = "faerry"
version = "0.1.0-alpha.12"
description = "Faerry - Portable Agents Manager"
authors = ["Faerry contributors"]
edition = "2021"

[lib]
name = "faerry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
