[package]
name = "agents-manager"
version = "0.1.0"
description = "Portable Agents Manager"
authors = ["Portable Agents"]
edition = "2021"

[lib]
name = "agents_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
